@@ -53,6 +53,7 @@
             <value>
               <list>
                 <string>left</string>
+                <string>hidden</string>
               </list>
             </value>
         </item>
@@ -61,11 +62,18 @@
             <value>
               <dictionary>
                 <item>
+                    <key> <string>hidden</string> </key>
+                    <value>
+                      <list>
+                        <string>your_workflow_action</string>
+                      </list>
+                    </value>
+                </item>
+                <item>
                     <key> <string>left</string> </key>
                     <value>
                       <list>
                         <string>your_comment</string>
-                        <string>your_workflow_action</string>
                         <string>your_function</string>
                         <string>your_group</string>
                         <string>your_site</string>
